--- a/frontend/styles/home.css
+++ b/frontend/styles/home.css
@@ -5,7 +5,7 @@ body {
   align-items: center;
   min-height: 90vh;
   background-color: #f4f4f4;
-  background-image: url('background.jpg');
+  background-image: url('../images/background.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
