--- a/frontend/src/public/styles/home.css
+++ b/frontend/src/public/styles/home.css
@@ -77,6 +77,7 @@ h2 {
 }
 
 .search-container {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -99,4 +100,36 @@ h2 {
   cursor: pointer;
   font-weight: bold;
   font-size: large;
+}
+
+.dropdown-list {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-top: none;
+  display: none;
+  max-height: 200px;
+  overflow-y: auto;
+  border-radius: 5px 0 0 5px;
+}
+
+.dropdown-list.visible {
+  display: block; 
+}
+
+.dropdown-list .result-item {
+  cursor: pointer;
+  transition: background-color 0.3s;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 20px;
+  text-align: start;
+}
+
+.dropdown-list .result-item:hover {
+  cursor: pointer;
+  background-color: #eee;
 }
