--- a/frontend/src/public/styles/results.css
+++ b/frontend/src/public/styles/results.css
@@ -32,34 +32,25 @@ body {
   padding: 25px 0;
 }
 
-.navigation {
-  display: flex;
-  justify-content: center;
-  padding: 10px 0;
-}
-
-.nav-list {
-  list-style: none;
-  display: flex;
-  gap: 20px;
-}
-
-.nav-list li a {
-  text-decoration: none;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: color 0.3s ease-in-out;
-}
-
-.nav-list li a:hover {
-  color: #03f7ff;
-}
-
 main {
-  width: 40%;
+  width: 45%;
   text-align: center;
-  margin-right: 55px;
+  margin-left: 20px; 
+  max-height: 75vh;
+  overflow-y: auto;
+}
+
+main::-webkit-scrollbar {
+  width: 8px;
+}
+
+main::-webkit-scrollbar-thumb {
+  background-color: #6f00ff;
+  border-radius: 4px;
+}
+
+main::-webkit-scrollbar-thumb:hover {
+  background-color: #03ff64;
 }
 
 h1 {
@@ -106,7 +97,7 @@ h2 {
 
 .result-card {
   background-color: white;
-  width: 100%;
+  width: 90%;
   border-radius: 10px;
   padding: 20px;
   margin: 10px;
@@ -121,6 +112,9 @@ h2 {
   justify-content: space-between;
   width: 100%;
   margin-top: 5px;
+  font-size: 14px;
+  color: rgb(95, 2, 95);
+  font-weight: bold;
 }
 
 .quote {
@@ -134,7 +128,26 @@ h2 {
 .location,
 .date,
 .occupation {
-  font-size: 16px;
-  color: rgb(95, 2, 95);
+  font-size: 12px;
   margin-bottom: 5px;
+}
+
+.category-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.category {
+  padding: 10px;
+  cursor: pointer;
+  margin-right: 10px;
+  font-weight: normal;
+  color: #ffffff;
+  transition: color 0.3s ease-in-out, font-weight 0.3s ease-in-out;
+}
+
+.category.selected {
+  font-weight: bold;
+  color: #03ff64;
 }
