--- a/frontend/src/public/styles/landing.css
+++ b/frontend/src/public/styles/landing.css
@@ -83,6 +83,18 @@ body {
     margin-bottom: 20px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   }
+
+  p {
+    font-size: 10px;
+    font-weight: 200;
+    color: white;
+    margin-bottom: 10px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  }
+
+  footer {
+    text-align: center;
+  }
   
   .search-container {
     position: relative;
@@ -142,3 +154,24 @@ body {
     background-color: #eee;
   }
   
+  .google-login-button {
+    display: inline-flex;
+    align-items: center;
+    background-color: #4285f4; /* Google Blue */
+    color: #fff; /* Text color */
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+  }
+  
+  .google-login-button:hover {
+    background-color: #357ae8; /* Slightly darker blue on hover */
+  }
+  
+  .google-login-button img {
+    width: 24px;
+    height: 24px;
+    margin-right: 10px;
+  }
